bugs fixed - program updated

--- a/english-menu.html
+++ b/english-menu.html
@@ -78,7 +78,7 @@ referrerpolicy="no-referrer"
 			  <button data-trigger="navbar_main" class="d-lg-none btn " type="button"> <i class="fas fa-bars text-white"></i> </button>	
 		  </li>		 
   </ul>
-  <div class="logo-cont col-5 col-sm-4 col-lg-3 d-flex justify-content-start py-3 p-0 " >
+  <div class="logo-cont col-5 col-sm-4 col-lg-3 d-flex d-lg-none justify-content-start py-3 p-0 " >
 	  <img src="./img/Logo_White.png" class="w-100 ">
   </div>
 
@@ -124,7 +124,7 @@ referrerpolicy="no-referrer"
 							  <button class="nav-link w-100 py-3 d-flex justify-content-between"  style="padding: 0 54px;background:rgb(177, 145, 139);border:none;outline: none;color: white;" id="settings-tab" data-bs-toggle="tab" data-bs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false"><span>سقف های شفاف</span> <i class="fa fa-angle-right" aria-hidden="true" ></i></button>
 							</li>
 						  </ul>
-				
+						  
 					  </div>
 					</div>
 					<!-- پایان دکمه تب های انتخاب کننده -->
@@ -278,13 +278,13 @@ referrerpolicy="no-referrer"
 												</p>
 											</div>
 
-											<div class="row">
+											<div class="row accordion-collapse  collapse"  id="collapseOneA">
 
-												<div class="col-4 col-lg-4 d-none d-sm-block" id="collapseOneA">
+												<div class="col-4 col-lg-4 d-none d-sm-block" >
 													<img src="img/1.jpg" alt="" class="w-100 h-75 ">
 												</div>
 		
-												<div class="card-body col-8 col-lg-8 hide" id="collapseOneA">
+												<div class="card-body col-8 col-lg-8 hide">
 													<ul class="text-black list-unstyled">
 													<li id="products"><a href="#" >پله 1 </a></li>
 													<li id="products"><a href="#" >پله 2</a></li>
@@ -308,13 +308,13 @@ referrerpolicy="no-referrer"
 												</p>
 											</div>
 
-											<div class="row">
+											<div class="row accordion-collapse  collapse" id="collapsetwoA">
 
-												<div class="col-4 col-lg-4 d-none d-sm-block" id="collapsetwoA">
+												<div class="col-4 col-lg-4 d-none d-sm-block" >
 													<img src="img/1.jpg" alt="" class="w-100 h-75  d-lg-block">
 												</div>
 		
-												<div class="card-body col-8 col-lg-8 hide" id="collapsetwoA">
+												<div class="card-body col-8 col-lg-8 hide" >
 													<ul class="text-black list-unstyled">
 													<li id="products"><a href="#" >پله 1 </a></li>
 													<li id="products"><a href="#" >پله 2</a></li>
@@ -335,13 +335,13 @@ referrerpolicy="no-referrer"
 												</p>
 											</div>
 
-											<div class="row">
+											<div class="row accordion-collapse  collapse" id="collapsethreeA">
 
-												<div class="col-4 col-lg-4 d-none d-sm-block" id="collapsethreeA">
+												<div class="col-4 col-lg-4 d-none d-sm-block" >
 													<img src="img/1.jpg" alt="" class="w-100 h-75  d-lg-block">
 												</div>
 		
-												<div class="card-body col-8 col-lg-8 hide" id="collapsethreeA">
+												<div class="card-body col-8 col-lg-8 hide" >
 													<ul class="text-black list-unstyled">
 													<li id="products"><a href="#" >پله 1 </a></li>
 													<li id="products"><a href="#" >پله 2</a></li>
@@ -424,6 +424,9 @@ Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores qui tempore
 			  <a class="nav-link " href="#"> تماس باما  </a>
 			</li>
 		  </ul>
+		  <div class="logo-cont col-4 col-sm-4 col-lg-3 d-none d-lg-flex justify-content-start py-3 p-0 " >
+			<img src="./img/Logo_White.png" class="w-50 h-75 ">
+		  </div>
 		 
 		</div> <!-- container-fluid.// -->
 	  </nav>
