finish him 1 - part of  last of commits

--- a/english-menu.html
+++ b/english-menu.html
@@ -78,7 +78,7 @@ referrerpolicy="no-referrer"
 			  <button data-trigger="navbar_main" class="d-lg-none btn " type="button"> <i class="fas fa-bars text-white"></i> </button>	
 		  </li>		 
   </ul>
-  <div class="logo-cont col-5 col-sm-4 col-lg-3 d-flex d-lg-none justify-content-start py-3 p-0 " >
+  <div class="logo-cont col-5 col-sm-4 col-lg-3 d-flex d-lg-none justify-content-center py-3 p-0 " >
 	  <img src="./img/Logo_White.png" class="w-100 ">
   </div>
 
@@ -112,7 +112,7 @@ referrerpolicy="no-referrer"
   
 						  <ul class="nav flex-column nav-item " id="myTab" role="tablist">
 							<li class="nav-item w-100 " role="presentation">
-								<button class="nav-link active py-3 w-100 d-flex justify-content-between " style="padding: 0 54px;background:rgb(75, 61, 58);border:none;outline: none;color: white;" id="home-tab" data-bs-toggle="tab" data-bs-target="#hometab" type="button" role="tab" aria-controls="home" aria-selected="true"><span>نمای شفاف ساختمانی</span> <i class="fa fa-angle-right" aria-hidden="true" ></i></button>
+							  <button class="nav-link w-100 py-3 d-flex justify-content-between " style="padding: 0 54px;background:rgb(75, 61, 58);border:none;outline: none;color: white;" id="home-tab" data-bs-toggle="tab" data-bs-target="#hometab" type="button" role="tab" aria-controls="home" aria-selected="true"><span>نمای شفاف ساختمانی</span> <i class="fa fa-angle-right" aria-hidden="true" ></i></button>
 							</li>
 							<li class="nav-item w-100" role="presentation">
 							  <button class="nav-link w-100 py-3 d-flex justify-content-between"  style="padding: 0 54px;background:rgb(95, 77, 73);border:none;outline: none;color: white;" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false"><span>پله های ساختمانی</span> <i class="fa fa-angle-right" aria-hidden="true" ></i></button>
@@ -424,7 +424,7 @@ Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores qui tempore
 			  <a class="nav-link " href="#"> تماس باما  </a>
 			</li>
 		  </ul>
-		  <div class="logo-cont col-4 col-sm-4 col-lg-3 d-none d-lg-flex justify-content-start py-3 p-0 " >
+		  <div class="logo-cont col-4 col-sm-4 col-lg-3 d-none d-lg-flex justify-content-center py-3 p-0 " >
 			<img src="./img/Logo_White.png" class="w-50 h-75 ">
 		  </div>
 		 
