--- a/english-menu.html
+++ b/english-menu.html
@@ -103,7 +103,7 @@ referrerpolicy="no-referrer"
 			<li class="nav-item"><a class="nav-link" href="#"> پروژه ها </a></li>
 			<li class="nav-item" id="services"> 
 			  <a class="nav-link dropdown-toggle" id="toggledrop" href="#" data-bs-toggle="dropdown">حوزه های فعالیت</a>
-			  <div class="dropdown-menu megamenu" id="megamenu" role="menu" style="padding: 0 !important;margin: 0 !important;">
+			  <div class="dropdown-menu megamenu shadow-lg" id="megamenu" role="menu" style="padding: 0 !important;margin: 0 !important;">
 				  <div class="row" id="g3">
   
 					<!--شروع دکمه تب های انتخاب کننده -->
@@ -132,22 +132,22 @@ referrerpolicy="no-referrer"
 
   
 					<!-- شروع دکمه تب های انتخاب شده -->
-					<div id="tabpane-selected-menu" class="row col-12 col-lg-8 py-0 py-lg-4">
+					<div id="tabpane-selected-menu" class="row col-12 col-lg-8">
 
 					<!-- محتوای سایز کامپیوتر -->
 						<div class="tab-content d-none d-md-block" style="width:auto;">
 	
-							<div class="tab-pane" id="hometab" role="tabpanel" aria-labelledby="home-tab" style="width:115%;">
+							<div class="tab-pane" id="hometab" role="tabpanel" aria-labelledby="home-tab" style="width:110%;">
 	
-								<div class="row d-flex flex-row-reverse justify-content-between  py-3  p-lg-2" >
+								<div class="row d-flex flex-row-reverse justify-content-between  py-2" >
 									<!-- بلاک مورد نظر پیشنهادات  -->
 
 					
 											<div class="row col-12 col-lg-6 mt-4 ml-lg-5 suggest " style="display: flex;flex-direction: row-reverse;text-align: left;" >
-												<div class="col-12 col-lg-5">
-													<img src="img/1.jpg" alt="" class="w-100 h-75 d-none d-lg-block">
+												<div class="col-12 col-lg-4">
+													<img src="img/1.jpg" alt="" class="w-100 h-100 d-none d-lg-block">
 												</div>
-												<div class="col-12 col-lg-7">
+												<div class="col-12 col-lg-8">
 													<h4>پله فلان</h4>
 													<ul class="text-black list-unstyled">
 													<li id="products"><a href="#" >پله 1 </a></li>
@@ -160,10 +160,10 @@ referrerpolicy="no-referrer"
 
 
 											<div class="row col-12 col-lg-6 mt-4 ml-lg-5 suggest " style="display: flex;flex-direction: row-reverse;text-align: left;" >
-												<div class="col-12 col-lg-5">
-													<img src="img/1.jpg" alt="" class="w-100 h-75 d-none d-lg-block">
+												<div class="col-12 col-lg-4">
+													<img src="img/1.jpg" alt="" class="w-100 h-100 d-none d-lg-block">
 												</div>
-												<div class="col-12 col-lg-7">
+												<div class="col-12 col-lg-8">
 													<h4>پله فلان</h4>
 													<ul class="text-black list-unstyled">
 													<li id="products"><a href="#" >پله 1 </a></li>
@@ -176,10 +176,10 @@ referrerpolicy="no-referrer"
 
 
 											<div class="row col-12 col-lg-6 mt-4 ml-lg-5 suggest" style="display: flex;flex-direction: row-reverse;text-align: left;" >
-												<div class="col-12 col-lg-5">
-													<img src="img/1.jpg" alt="" class="w-100 h-75 d-none d-lg-block">
+												<div class="col-12 col-lg-4">
+													<img src="img/1.jpg" alt="" class="w-100 h-100 d-none d-lg-block">
 												</div>
-												<div class="col-12 col-lg-7">
+												<div class="col-12 col-lg-8">
 													<h4>پله فلان</h4>
 													<ul class="text-black list-unstyled">
 													<li id="products"><a href="#" >پله 1 </a></li>
@@ -191,10 +191,10 @@ referrerpolicy="no-referrer"
 											</div>
 
 											<div class="row col-12 col-lg-6 mt-4 ml-lg-5 suggest" style="display: flex;flex-direction: row-reverse;text-align: left;" >
-												<div class="col-12 col-lg-5">
-													<img src="img/1.jpg" alt="" class="w-100 h-75 d-none d-lg-block">
+												<div class="col-12 col-lg-4">
+													<img src="img/1.jpg" alt="" class="w-100 h-100 d-none d-lg-block">
 												</div>
-												<div class="col-12 col-lg-7">
+												<div class="col-12 col-lg-8">
 													<h4>پله فلان</h4>
 													<ul class="text-black list-unstyled">
 													<li id="products"><a href="#" >پله 1 </a></li>
