last commit 2 - lets go

--- a/english-menu.html
+++ b/english-menu.html
@@ -112,16 +112,16 @@ referrerpolicy="no-referrer"
   
 						  <ul class="nav flex-column nav-item " id="myTab" role="tablist">
 							<li class="nav-item w-100 " role="presentation">
-							  <button class="nav-link w-100 py-3 d-flex justify-content-between " style="padding: 0 54px;background:rgb(75, 61, 58);border:none;outline: none;color: white;" id="home-tab" data-bs-toggle="tab" data-bs-target="#hometab" type="button" role="tab" aria-controls="home" aria-selected="true"><span>نمای شفاف ساختمانی</span> <i class="fa fa-angle-right" aria-hidden="true" ></i></button>
+							  <button onclick="openlinks('https:\\www.google.com')" class="nav-link w-100 py-3 d-flex justify-content-between " style="padding: 0 54px;background:rgb(75, 61, 58);border:none;outline: none;color: white;" id="home-tab" data-bs-toggle="tab" data-bs-target="#hometab" type="button" role="tab" aria-controls="home" aria-selected="true"><span>نمای شفاف ساختمانی</span> <i class="fa fa-angle-right" aria-hidden="true" ></i></button>
 							</li>
 							<li class="nav-item w-100" role="presentation">
-							  <button class="nav-link w-100 py-3 d-flex justify-content-between"  style="padding: 0 54px;background:rgb(95, 77, 73);border:none;outline: none;color: white;" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false"><span>پله های ساختمانی</span> <i class="fa fa-angle-right" aria-hidden="true" ></i></button>
+							  <button onclick="openlinks('https:\\www.google.com')" class="nav-link w-100 py-3 d-flex justify-content-between"  style="padding: 0 54px;background:rgb(95, 77, 73);border:none;outline: none;color: white;" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false"><span>پله های ساختمانی</span> <i class="fa fa-angle-right" aria-hidden="true" ></i></button>
 							</li>
 							<li class="nav-item w-100" role="presentation">
-							  <button class="nav-link w-100 py-3 d-flex justify-content-between"  style="padding: 0 54px;background:rgb(148, 120, 115);border:none;outline: none;color: white;" id="messages-tab" data-bs-toggle="tab" data-bs-target="#messages" type="button" role="tab" aria-controls="messages" aria-selected="false"><span>نرده و حفاظ</span> <i class="fa fa-angle-right" aria-hidden="true" ></i></button>
+							  <button onclick="openlinks('https:\\www.google.com')" class="nav-link w-100 py-3 d-flex justify-content-between"  style="padding: 0 54px;background:rgb(148, 120, 115);border:none;outline: none;color: white;" id="messages-tab" data-bs-toggle="tab" data-bs-target="#messages" type="button" role="tab" aria-controls="messages" aria-selected="false"><span>نرده و حفاظ</span> <i class="fa fa-angle-right" aria-hidden="true" ></i></button>
 							</li>
 							<li class="nav-item w-100" role="presentation">
-							  <button class="nav-link w-100 py-3 d-flex justify-content-between"  style="padding: 0 54px;background:rgb(177, 145, 139);border:none;outline: none;color: white;" id="settings-tab" data-bs-toggle="tab" data-bs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false"><span>سقف های شفاف</span> <i class="fa fa-angle-right" aria-hidden="true" ></i></button>
+							  <button onclick="openlinks('https:\\www.google.com')" class="nav-link w-100 py-3 d-flex justify-content-between"  style="padding: 0 54px;background:rgb(177, 145, 139);border:none;outline: none;color: white;" id="settings-tab" data-bs-toggle="tab" data-bs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false"><span>سقف های شفاف</span> <i class="fa fa-angle-right" aria-hidden="true" ></i></button>
 							</li>
 						  </ul>
 						  
@@ -150,10 +150,10 @@ referrerpolicy="no-referrer"
 												<div class="col-12 col-lg-8">
 													<h4>پله فلان</h4>
 													<ul class="text-black list-unstyled">
-													<li id="products"><a href="#" >پله 1 </a></li>
-													<li id="products"><a href="#" >پله 2</a></li>
-													<li id="products"><a href="#" >پله 3</a></li>
-													<li id="products"><a href="#" >پله 4</a></li>
+													<li class="products"><a href="#" >پله 1 </a></li>
+													<li class="products"><a href="#" >پله 2</a></li>
+													<li class="products"><a href="#" >پله 3</a></li>
+													<li class="products"><a href="#" >پله 4</a></li>
 													</ul>
 												</div>
 											</div>
@@ -166,10 +166,10 @@ referrerpolicy="no-referrer"
 												<div class="col-12 col-lg-8">
 													<h4>پله فلان</h4>
 													<ul class="text-black list-unstyled">
-													<li id="products"><a href="#" >پله 1 </a></li>
-													<li id="products"><a href="#" >پله 2</a></li>
-													<li id="products"><a href="#" >پله 3</a></li>
-													<li id="products"><a href="#" >پله 4</a></li>
+													<li class="products"><a href="#" >پله 1 </a></li>
+													<li class="products"><a href="#" >پله 2</a></li>
+													<li class="products"><a href="#" >پله 3</a></li>
+													<li class="products"><a href="#" >پله 4</a></li>
 													</ul>
 												</div>
 											</div>
@@ -182,10 +182,10 @@ referrerpolicy="no-referrer"
 												<div class="col-12 col-lg-8">
 													<h4>پله فلان</h4>
 													<ul class="text-black list-unstyled">
-													<li id="products"><a href="#" >پله 1 </a></li>
-													<li id="products"><a href="#" >پله 2</a></li>
-													<li id="products"><a href="#" >پله 3</a></li>
-													<li id="products"><a href="#" >پله 4</a></li>
+													<li class="products"><a href="#" >پله 1 </a></li>
+													<li class="products"><a href="#" >پله 2</a></li>
+													<li class="products"><a href="#" >پله 3</a></li>
+													<li class="products"><a href="#" >پله 4</a></li>
 													</ul>
 												</div>
 											</div>
@@ -197,10 +197,10 @@ referrerpolicy="no-referrer"
 												<div class="col-12 col-lg-8">
 													<h4>پله فلان</h4>
 													<ul class="text-black list-unstyled">
-													<li id="products"><a href="#" >پله 1 </a></li>
-													<li id="products"><a href="#" >پله 2</a></li>
-													<li id="products"><a href="#" >پله 3</a></li>
-													<li id="products"><a href="#" >پله 4</a></li>
+													<li class="products"><a href="#" >پله 1 </a></li>
+													<li class="products"><a href="#" >پله 2</a></li>
+													<li class="products"><a href="#" >پله 3</a></li>
+													<li class="products"><a href="#" >پله 4</a></li>
 													</ul>
 												</div>
 											</div>
