last commit 3 - lets goo - english menu updated

--- a/english-menu.html
+++ b/english-menu.html
@@ -103,8 +103,8 @@ referrerpolicy="no-referrer"
 			<li class="nav-item"><a class="nav-link" href="#"> پروژه ها </a></li>
 			<li class="nav-item" id="services"> 
 			  <a class="nav-link dropdown-toggle" id="toggledrop" href="#" data-bs-toggle="dropdown">حوزه های فعالیت</a>
-			  <div class="dropdown-menu megamenu shadow-lg" id="megamenu" role="menu" style="padding: 0 !important;margin: 0 !important;">
-				  <div class="row" id="g3">
+			  <div class="dropdown-menu megamenu shadow-lg" id="megamenu" role="menu" style="padding: 0 !important;margin: 0 !important;background: transparent;">
+				  <div class="row bg-transparent" id="g3">
   
 					<!--شروع دکمه تب های انتخاب کننده -->
 					<div id="tabpane-select-buttons" class="col-lg-3 col-12  d-none d-md-block">
@@ -132,12 +132,12 @@ referrerpolicy="no-referrer"
 
   
 					<!-- شروع دکمه تب های انتخاب شده -->
-					<div id="tabpane-selected-menu" class="row col-12 col-lg-8">
+					<div id="tabpane-selected-menu" class="row col-12 col-lg-8 bg-white w-75">
 
 					<!-- محتوای سایز کامپیوتر -->
-						<div class="tab-content d-none d-md-block" style="width:auto;">
+						<div class="tab-content d-none d-md-block">
 	
-							<div class="tab-pane" id="hometab" role="tabpanel" aria-labelledby="home-tab" style="width:110%;">
+							<div class="tab-pane" id="hometab" role="tabpanel" aria-labelledby="home-tab">
 	
 								<div class="row d-flex flex-row-reverse justify-content-between  py-2" >
 									<!-- بلاک مورد نظر پیشنهادات  -->
