--- a/farsi-menu.html
+++ b/farsi-menu.html
@@ -100,7 +100,7 @@ referrerpolicy="no-referrer"
 					<div class="row" id="g3">
 	
 					  <!--شروع دکمه تب های انتخاب کننده -->
-					  <div id="tabpane-select-buttons " class="col-lg-3 col-12  d-none d-md-block">
+					  <div  class="col-lg-3 col-12  d-none d-md-block">
 						<div class="col-megamenu ">
 	
 							<ul class="nav flex-column nav-item w-100" id="myTab" role="tablist">
@@ -125,7 +125,7 @@ referrerpolicy="no-referrer"
   
 	
 					  <!-- شروع دکمه تب های انتخاب شده -->
-					  <div id="tabpane-selected-menu " class="row col-12 col-lg-8 py-0 py-lg-4 px-0 bg-white w-75">
+					  <div  class="row col-12 col-lg-8 py-0 py-lg-4 px-0 bg-white w-75">
   
 					  <!-- محتوای سایز کامپیوتر -->
 						  <div class="tab-content d-none d-md-block ">
@@ -137,7 +137,7 @@ referrerpolicy="no-referrer"
 									  <!-- بلاک مورد نظر پیشنهادات  -->
   
 					  
-									  <div class="row col-12 col-lg-6 mt-4 ml-lg-5 suggest " style="display: flex;flex-direction: row-reverse;text-align: right;" >
+									<div class="row col-12 col-lg-6 mt-4 ml-lg-5 suggest " style="display: flex;flex-direction: row-reverse;text-align: right;" >
 										<div class="col-12 col-lg-4">
 											<img src="img/1.jpg" alt="" class="w-100 h-100 d-none d-md-block">
 										</div>
