last commit 4 - lets goooo

--- a/english-menu.html
+++ b/english-menu.html
@@ -132,7 +132,7 @@ referrerpolicy="no-referrer"
 
   
 					<!-- شروع دکمه تب های انتخاب شده -->
-					<div id="tabpane-selected-menu" class="row col-12 col-lg-8 bg-white w-75">
+					<div id="tabpane-selected-menu" class="row col-12 col-lg-8  w-75">
 
 					<!-- محتوای سایز کامپیوتر -->
 						<div class="tab-content d-none d-md-block">
