--- a/farsi-menu.html
+++ b/farsi-menu.html
@@ -51,7 +51,7 @@ referrerpolicy="no-referrer"
 
 <div>
 
-	<div class="top-menu navbar" id="navone" >
+	<div class="top-menu navbar" id="navone">
 		<div id="contnav" class="d-flex justify-content-between justify-content-md-between">
 			<ul class="navbar-nav languages d-flex flex-row">
 				<li class="nav-item">
@@ -91,7 +91,7 @@ referrerpolicy="no-referrer"
 		   </div>
 		   
 	   
-		  <ul class="navbar-nav ">
+		  <ul class="navbar-nav">
 			<li class="nav-item active"> <a class="nav-link" href="#">درباره ما </a> </li>
 			<li class="nav-item"><a class="nav-link" href="#"> پروژه ها </a></li>
 			<li class="nav-item" id="services"> 
@@ -100,7 +100,7 @@ referrerpolicy="no-referrer"
 					<div class="row" id="g3">
 	
 					  <!--شروع دکمه تب های انتخاب کننده -->
-					  <div  class="col-lg-3 col-12  d-none d-md-block">
+					  <div  class="col-lg-3 col-12  d-none d-md-block" id="tabpane-select-buttons">
 						<div class="col-megamenu ">
 	
 							<ul class="nav flex-column nav-item w-100" id="myTab" role="tablist">
@@ -125,7 +125,7 @@ referrerpolicy="no-referrer"
   
 	
 					  <!-- شروع دکمه تب های انتخاب شده -->
-					  <div  class="row col-12 col-lg-8 py-0 py-lg-4 px-0 bg-white w-75">
+					  <div id="tabpane-selected-menu" class="row col-12 col-lg-8 py-0 py-lg-4 px-0 w-75 d-none">
   
 					  <!-- محتوای سایز کامپیوتر -->
 						  <div class="tab-content d-none d-md-block ">
