last commit - last part

--- a/farsi-menu.html
+++ b/farsi-menu.html
@@ -62,11 +62,11 @@ referrerpolicy="no-referrer"
 					<li class="nav-item p-0 m-0">
 						<a class="nav-link" href="http://farsi-languages">FA</a>
 					</li>
-					<span>|</span>
+					<span style="padding:0 2px 0 2px;">|</span>
 					<li class="nav-item p-0 m-0">
 						<a class="nav-link" href="http://farsi-languages">EN</a>
 					</li>
-					<span>|</span>
+					<span style="padding:0 2px 0 2px;">|</span>
 					<li class="nav-item p-0 m-0">
 						<a class="nav-link" href="http://farsi-languages">AR</a>
 					</li>
@@ -74,7 +74,8 @@ referrerpolicy="no-referrer"
 					<li class="mx-3">
 						<a class="nav-link" href="http://farsi-languages">
 							تماس
-						<i class="fas fa-headset" style="color: white; font-size: 15px"></i>
+							<img  src="img/contact_25.png" alt="">
+						<!-- <i class="fas fa-headset" style="color: white; font-size: 15px"></i> -->
 						</a>
 					</li>
 				</ul>
@@ -84,7 +85,7 @@ referrerpolicy="no-referrer"
 			</div>
 	</div>
 
-	  <nav id="navbar_main" class="mobile-offcanvas navbar navbar-expand-lg navbar-dark shadow-lg">
+	  <nav id="navbar_main" class="mobile-offcanvas navbar navbar-expand-lg navbar-dark ">
       
 		<div class="container-fluid">
   
@@ -98,7 +99,7 @@ referrerpolicy="no-referrer"
 			<li class="nav-item"><a class="nav-link" href="#"> پروژه ها </a></li>
 			<li class="nav-item" id="services"> 
 				<a class="nav-link dropdown-toggle" id="toggledrop" href="#" data-bs-toggle="dropdown">حوزه های فعالیت</a>
-				<div class="dropdown-menu megamenu" id="megamenu" role="menu" style="padding: 0 !important;margin: 0 !important; background: transparent;">
+				<div class="dropdown-menu megamenu" id="megamenu" role="menu" style="padding: 0 !important;margin: 0 !important; background: transparent;border: none;">
 					<div class="row bg-transparent " id="g3" style="width: 112%;">
 	
 					  <!--شروع دکمه تب های انتخاب کننده -->
@@ -128,10 +129,10 @@ referrerpolicy="no-referrer"
   
 	
 					  <!-- شروع دکمه تب های انتخاب شده -->
-					  <div id="tabpane-selected-menu" class="row col-12 col-lg-8 py-0 py-lg-4">
+					  <div id="btntabs" class="row col-12 col-lg-8 py-0 py-lg-4">
   
 					  <!-- محتوای سایز کامپیوتر -->
-						  <div class="tab-content d-none d-md-block bg-white" style="width: 100%;">
+						  <div class="tab-content d-none d-md-block " style="width: 100%;">
 	  
 
 
@@ -258,7 +259,7 @@ referrerpolicy="no-referrer"
   
 							  <div class="accordion-item">
 							  <p class="accordion-header" id="headingOne">
-								  <button class=" py-3 w-100 d-flex justify-content-between " style="padding: 0 20px;border:none;outline: none;color: white;"  type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+								  <button ondblclick="openlinks('www.google.com')" class=" py-3 w-100 d-flex justify-content-between "  style="padding: 0 20px;border:none;outline: none;color: white;"  type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 								  نمای شفاف ساختمانی
 								  </button>
 							  </p>
@@ -270,12 +271,12 @@ referrerpolicy="no-referrer"
 									  <div class="row accordion col-12 col-lg-6 mt-4 ml-lg-5 suggest " style="display: flex;flex-direction: row-reverse;text-align: left;" >
    
   
-										    <div class="card  row d-flex flex-column">
+										    <div class="card  row d-flex flex-column " style="padding: 10px;">
 											  
 											  <div class="row col-12 accordion-item">
 												  <div class="col-12">
 													  <p class="accordion-header">
-														  <button class="btn w-100" data-bs-toggle="collapse" data-bs-target="#collapseOneA" style="outline: 0;">پله های اول </button>
+														  <button  class="btn w-100" data-bs-toggle="collapse" data-bs-target="#collapseOneA" style="outline: 0;">پله های اول </button>
 													  </p>
 												  </div>
   
@@ -301,7 +302,7 @@ referrerpolicy="no-referrer"
 											</div>
   
 
-											<div class="card  row d-flex flex-column">
+											<div class="card  row d-flex flex-column " style="padding: 10px;">
 
 											  <div class="row col-12 accordion-item">
 												  <div class="col-12">
@@ -331,7 +332,7 @@ referrerpolicy="no-referrer"
 										  	</div>
 
 
-											<div class="card accordion row d-flex flex-column">
+											<div class="card accordion row d-flex flex-column " style="padding: 10px;">
 
 												<div class="row col-12">
 													<div class="col-12">
