bugs fixed in menu

--- a/english-menu.html
+++ b/english-menu.html
@@ -150,11 +150,19 @@ referrerpolicy="no-referrer"
 					
 											<div class="row col-12 col-lg-6 mt-4 ml-lg-5 suggest " style="display: flex;flex-direction: row-reverse;text-align: left;" >
 												<div class="col-12 col-lg-4">
-													<img src="img/1.jpg" alt="" class="w-100 h-100 d-none d-lg-block">
+													<img src="img/1.jpg" alt="" class="w-100  d-none d-lg-block" style="max-height:75%;">
 												</div>
 												<div class="col-12 col-lg-8">
 													<h4>پله فلان</h4>
 													<ul class="text-black list-unstyled">
+													<li class="products"><a href="#" >پله 1 </a></li>
+													<li class="products"><a href="#" >پله 2</a></li>
+													<li class="products"><a href="#" >پله 3</a></li>
+													<li class="products"><a href="#" >پله 4</a></li>
+													<li class="products"><a href="#" >پله 1 </a></li>
+													<li class="products"><a href="#" >پله 2</a></li>
+													<li class="products"><a href="#" >پله 3</a></li>
+													<li class="products"><a href="#" >پله 4</a></li>
 													<li class="products"><a href="#" >پله 1 </a></li>
 													<li class="products"><a href="#" >پله 2</a></li>
 													<li class="products"><a href="#" >پله 3</a></li>
@@ -166,7 +174,7 @@ referrerpolicy="no-referrer"
 
 											<div class="row col-12 col-lg-6 mt-4 ml-lg-5 suggest " style="display: flex;flex-direction: row-reverse;text-align: left;" >
 												<div class="col-12 col-lg-4">
-													<img src="img/1.jpg" alt="" class="w-100 h-100 d-none d-lg-block">
+													<img src="img/1.jpg" alt="" class="w-100  d-none d-lg-block" style="max-height:75%;">
 												</div>
 												<div class="col-12 col-lg-8">
 													<h4>پله فلان</h4>
@@ -182,7 +190,7 @@ referrerpolicy="no-referrer"
 
 											<div class="row col-12 col-lg-6 mt-4 ml-lg-5 suggest" style="display: flex;flex-direction: row-reverse;text-align: left;" >
 												<div class="col-12 col-lg-4">
-													<img src="img/1.jpg" alt="" class="w-100 h-100 d-none d-lg-block">
+													<img src="img/1.jpg" alt="" class="w-100  d-none d-lg-block" style="max-height:75%;">
 												</div>
 												<div class="col-12 col-lg-8">
 													<h4>پله فلان</h4>
@@ -197,7 +205,7 @@ referrerpolicy="no-referrer"
 
 											<div class="row col-12 col-lg-6 mt-4 ml-lg-5 suggest" style="display: flex;flex-direction: row-reverse;text-align: left;" >
 												<div class="col-12 col-lg-4">
-													<img src="img/1.jpg" alt="" class="w-100 h-100 d-none d-lg-block">
+													<img src="img/1.jpg" alt="" class="w-100  d-none d-lg-block" style="max-height:75%;">
 												</div>
 												<div class="col-12 col-lg-8">
 													<h4>پله فلان</h4>
